calculate transfer function